tests/NormalTests/paczka1/fuzzy1/53530101.err
Error in line 3: JfHXYV5 S335 7,3
Error in line 2: 5WP9a A896 76,6
Error in line 5: kqeMGhWp S335 18,4
Error in line 12: 5WP9a S335 -1,6
